# nova

./: .gitignore  00_GLOBAL_ARCHITEKTUR_DEFINITION.md  01_INTERFACES_SCHICHTEN_ABSOLUT.md  Cargo.toml  SYSARCH-001_NovaDE_Systemarchitektur.md  SYSARCH-002_NovaDE_Technologie_Stack.md  SYSARCH-003_NovaDE_Performance_Benchmarks.md  SYSARCH-004_NovaDE_Sicherheitsarchitektur.md  SYSARCH-005_NovaDE_Kompatibilitaetsstandards.md
.github/workflows/: rust.yml
core/error/: IMPLEMENTIERUNG_PLAN.md
core/types/geometry/: IMPLEMENTIERUNG_PLAN.md
novade-core/: Cargo.toml
novade-core/src/: error.rs  lib.rs  types.rs  utils.rs
novade-core/src/config/: loader.rs  mod.rs
novade-core/src/logging/: mod.rs  setup.rs
novade-domain/: Cargo.toml
novade-domain/src/: error.rs  lib.rs
novade-domain/src/entities/: application.rs  mod.rs  user_preference.rs  workspace.rs
novade-domain/src/repositories/: application_repository.rs  mod.rs  user_preference_repository.rs  workspace_repository.rs
novade-domain/src/services/: application_service.rs  mod.rs  workspace_service.rs
novade-system/: Cargo.toml
novade-system/src/: client.rs  error.rs  lib.rs  main.rs  server.rs
novade-system/src/clipboard/: mod.rs
novade-system/src/compositor/: mod.rs
novade-system/src/compositor/core/: display.rs  mod.rs  output.rs  seat.rs  state.rs  state_tests.rs  window.rs
novade-system/src/input/: device.rs  event.rs  manager.rs  mod.rs  state.rs
novade-system/src/persistence/: database.rs  mod.rs
novade-system/src/process_manager/: default_process_manager.rs  mod.rs
novade-system/src/repositories/: application_repo.rs  mod.rs  user_preference_repo.rs  workspace_repo.rs
novade-ui/: Cargo.toml
novade-ui/src/: lib.rs
system/compositor/: IMPLEMENTIERUNG_PLAN.md
system/src/compositor/: mod.rs
system/src/compositor/renderer_interface/: mod.rs
ui/panel/: IMPLEMENTIERUNG_PLAN.md
