[package]
name = "novade-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Vorerst leer lassen, bis spezifische Abhängigkeiten benötigt werden.
# serde = { version = "1.0", features = ["derive"], optional = true }
# anyhow = "1.0"
# log = "0.4"
