[package]
name = "novade-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dirs = "5.0"
# anyhow = "1.0"
# log = "0.4" # log könnte entfernt werden, wenn tracing vollständig verwendet wird

[dev-dependencies]
tempfile = "3.3"
