[package]
name = "novade-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
novade-core = { path = "../novade-core" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
# Weitere dom채nenspezifische Abh채ngigkeiten sp채ter hinzuf체gen

[dev-dependencies]
mockall = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
