[package]
name = "novade-system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk4 = { version = "0.9.0", features = ["v4_12"] }
serde = { version = "1.0.190", features = ["derive"] }
smithay = "0.5.0"
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["full"] }
